# Capsule

./: .gitignore  LICENSE  README.md  codex.md  gemini.md  manifest.json  plan.md  pyproject.toml
docs/: capsule.schema.json  index.html  mvp.md
docs/site/: index.html  logo-variations.html  main.js  style.css
examples/mcp-research-agent/: capsule.yaml
examples/mcp-research-agent/agents/: researcher.md
examples/mcp-research-agent/examples/: topic.json
examples/mcp-research-agent/tests/: research_topic.yaml
examples/refund-support-agent/: capsule.yaml
examples/refund-support-agent/agents/: responder.md  triage.md
examples/refund-support-agent/examples/: refund-request.json
examples/refund-support-agent/tests/: refund_request.yaml
examples/refund-support-agent/tools/: draft_reply.py  policy_search.py
examples/translation-editor-agent/: capsule.yaml
examples/translation-editor-agent/agents/: editor.md  translator.md
examples/translation-editor-agent/examples/: text-to-translate.json
examples/translation-editor-agent/tests/: test_translation.yaml
examples/translation-editor-agent/tools/: write_file.py
src/capsule/: __init__.py  __main__.py
src/capsule/adapters/: __init__.py
src/capsule/adapters/crewai/: __init__.py  compiler.py
src/capsule/adapters/langgraph/: __init__.py  compiler.py
src/capsule/adapters/openai_agents/: __init__.py  (+1 more)
src/capsule/bundle/: __init__.py  builder.py  inspector.py  lockfile.py  verifier.py
src/capsule/cli/: __init__.py  app.py  render.py
src/capsule/graph/: __init__.py  builder.py  inspect.py  models.py  serialize.py
src/capsule/history/: __init__.py  models.py  store.py
src/capsule/project/: __init__.py  scaffold.py
src/capsule/runtime/: __init__.py  executor.py  tool_loader.py  trace.py
src/capsule/security/: __init__.py  permissions.py  scan.py
src/capsule/spec/: __init__.py  loader.py  models.py  paths.py  payload_schema.py  schema.py
src/capsule/testing/: __init__.py  models.py  runner.py
src/capsule/validate/: __init__.py  diagnostics.py  rules.py
tests/: test_bundle_and_compile.py  test_compile_crewai.py  test_compile_openai_agents.py  test_graph_cli.py  test_history.py  test_mcp_tools.py  test_runtime_permissions.py  test_runtime_testing.py  test_scaffold.py  test_schema.py  test_security_scan.py  test_spec_validate_graph.py  test_validation_errors.py
